--- a/Front-End Warm Up/login.html
+++ b/Front-End Warm Up/login.html
@@ -14,9 +14,9 @@
         <header>
             <nav>
                 <ul class="nav nav-tabs">
-                    <li role="presentation"><a href="home.html">Home</a></li>
+                    <!--<li role="presentation"><a href="home.html">Home</a></li>-->
                     <li role="presentation" class="pull-right"><a href="register.html">Register</a></li>
-                    <li role="presentation" class="active pull-right"><a href="login.html">Login</a></li>
+                    <li role="presentation" class="active pull-right"><a href="login.html" class="active">Login</a></li>
                 </ul>
 
             </nav>
