--- a/Front-End Warm Up/register.html
+++ b/Front-End Warm Up/register.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="css/custom.css"/>
 </head>
 <body>
     <div class="container-fluid">
         <header>
             <nav>
-                <ul class="nav nav-tabs">
-                    <li role="presentation"><a href="home.html">Home</a></li>
-                    <li role="presentation" class="active pull-right"><a href="register.html">Register</a></li>
+                <ul class="nav nav-default">
+    
                     <li role="presentation" class="pull-right"><a href="login.html">Login</a></li>
+                    <li role="presentation" class="pull-right"><a href="register.html">Register</a></li>
                 </ul>
-
             </nav>
         </header>
         <div class="container">
