changing my code to es6

--- a/Front-End Warm Up/home.html
+++ b/Front-End Warm Up/home.html
@@ -101,7 +101,7 @@
                 sabio.page.activeQuestion = this;
                 console.log(sabio.page.activeQuestion)
                 var id =  $("#faqId").val();   
-                window.location = "newFaq.html?id=" + id 
+                window.location = `newFaq.html?id=${id}`
             }
 
             sabio.page.loadFaq = function (id, status, xhr) {
@@ -109,7 +109,7 @@
             }
 
             sabio.page.getUserSuccess = function (data, status, xhr) {
-                $("h3 span").text(data.item.firstName + " " + data.item.lastName + " " + data.item.id);
+                $("h3 span").text(`${data.item.firstName}  ${data.item.lastName} ${data.item.id}`);
             }
 
             sabio.page.getUserListSuccess = function (data, status, xhr) {
@@ -140,7 +140,9 @@
 
             sabio.page.loadCategorySuccessFaqList = function (data, status, xhr) { 
                 data.items.forEach(function (item) {
-                    $(".sec-nav ul").append("<li role='presentation' data-id=" + item.id + "><a href=#" + item.name + " aria-controls='" + item.name + "' role='tab' data-toggle='tab'>" + item.name + "</a></li>");
+       
+                    $(".sec-nav ul").append(`<li role='presentation' data-id=${item.id}><a href="#${item.name}" aria-controls="${item.name}" role="tab" data-toggle="tab">${item.name}</a></li>`);
+
                 $(".sec-nav ul li").eq(0).addClass("active");     
                 });
                 sabio.services.getFaqUserQuestions(sabio.page.getUserListSuccess, sabio.page.error);            
