--- a/Front-End Warm Up/newFaq.html
+++ b/Front-End Warm Up/newFaq.html
@@ -16,7 +16,7 @@
                 <ul class="nav nav-default">
                     <li role="presentation" class="pull-right" id="btnLogout"><a href="#">Logout</a></li>
                     <li role="presentation" class="pull-left"><a href="home.html">Home</a></li>
-                    <li role="presentation" class="pull-right" id="btnQuiz"><a href="#">My Quizzes</a></li>
+                    <li role="presentation" class="pull-right" id="btnQuiz"><a href="newQuiz.html">My Quizzes</a></li>
                     <li role="presentation" class="pull-right" id="btnMyFaq"><a href="home.html">My FAQ's</a></li>
                     <li role="presentation" class="pull-right" id="btnFaq"><a href="newFaq.html" class="active">New FAQ's</a></li>
                     <!--<li role="presentation" class="pull-right"><a href="login.html">Login</a></li>
