--- a/Front-End Warm Up/newQuiz.html
+++ b/Front-End Warm Up/newQuiz.html
@@ -20,8 +20,6 @@
                     <li role="presentation" class="pull-right" id="btnQuiz"><a href="newQuiz.html" class="active">My Quizzes</a></li>
                     <li role="presentation" class="pull-right" id="btnMyFaq"><a href="home.html">My FAQ's</a></li>
                     <li role="presentation" class="pull-right" id="btnFaq"><a href="newFaq.html">New FAQ's</a></li>
-                    <!--<li role="presentation" class="pull-right"><a href="login.html">Login</a></li>
-                <li role="presentation" class="pull-right"><a href="register.html">Register</a></li>-->
                 </ul>
             </nav>
         </header>
@@ -32,9 +30,7 @@
             </div>
             <div class="row">
                 <form class="well col-md-6 col-md-offset-3">
-
                     <input type="hidden" id="quizId" />
-
                     <h1 class="text-center">Create a Quiz</h1>
                     <div class="form-group">
                         <label>Quiz Name</label>
@@ -82,74 +78,12 @@
                     <button type="submit" class="btn btn-default pull-right" id="btnQuizSub">Submit</button>
                 </form>
             </div>
-
-            <!--<div class="row hide">
-                <button type="button" class="btn btn-default" id="btnAddQuestion">Add Questions</button>
-            </div>-->
             <div class="row newQues">
-                <!--    <form class="well col-md-6 col-md-offset-3">
-
-        <input type="hidden" id="quizIdForQuestion" />
-        <input type="hidden" id="questionIdForQuestion" />
-
-        <h1 class="text-center">Create a Question</h1>
-
-        <div class="form-group">
-            <label>Question</label>
-            <input type="text" class="form-control" id="Questionq" placeholder="Question">
-        </div>
-
-        <div class="form-group">
-            <label>Answer Type</label>
-            <select id="questionAnswerType" class="btn btn-default dropdown-toggle" aria-labelledby="dropdownMenu1">
-                <option value="0">Select</option>
-                <option value="Single">Single</option>
-                <option value="Multiple">Multiple</option>
-                <option value="Open">Open</option>
-            </select>
-            <br><br>
-        </div>
-
-        <div class="form-group">
-            <label>Answer</label>
-            <input type="text" class="form-control" id="questionAnswer" placeholder="Answer">
-        </div>
-
-        <div class="form-group">
-            <label>Is Correct</label>
-            <p></p>
-            <label class="radio-inline">
-                <input type="radio" name="quesCorrect" id="questionRadio1" value="true"> Yes
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="quesCorrect" id="questionRadio2" value="false" checked> No
-            </label>
-        </div>
-
-        <div class="form-group">
-            <label>Sort Order</label>
-            <input type="text" class="form-control" id="questionSort" placeholder="Sort Order">
-        </div>
-
-        <div class="form-group">
-            <label>Open Answer</label>
-            <input type="text" class="form-control" id="questionOpen" placeholder="Open Answer Question">
-        </div>
-
-        <div class="form-group">
-            <label>Media</label>
-            <input type="text" class="form-control" id="media" placeholder="Media">
-        </div>
-
-        <button type="button" class="btn btn-primary pull-left" id="btnNewQues">New Question</button>
-        <button type="button" class="btn btn-success pull-right" id="btnSubNewQues">Submit Question</button>
-
-    </form>-->
             </div>
             </div>
     </div>
     <script type="text/html" id="template">
-        <form class=" well col-md-6 col-md-offset-3">
+        <form class="well col-md-6 col-md-offset-3 questionForm">
 
             <input type="hidden" id="quizIdForQuestion"/>
             <input type="hidden" id="questionIdForQuestion" />
@@ -260,8 +194,9 @@
         sabio.page.handlers.onDeleteQuestion = () => {
             console.log("deleting question");
 
-            var quizId = $("#quizIdForQuestion").val()
-            sabio.services.deleteQuizQuestion(quizId, sabio.page.deleteQuestionSuccess, sabio.page.error);
+            var questionId = $("#questionIdForQuestion").val();
+            console.log(questionId)
+            sabio.services.deleteQuizQuestion( questionId, sabio.page.deleteQuestionSuccess, sabio.page.error);
         }
 
         sabio.page.showNewAddedQuestion = () => {
@@ -315,8 +250,12 @@
             // $("#btnAddQuestion").parents("div").removeClass("hide")
 
         }
-
-        sabio.page.deleteQuestionSuccess = (data, id, status, xhr) => console.log("delete successful")
+         
+        sabio.page.deleteQuestionSuccess = function ( id, status, xhr)  {
+            console.log("delete successful")
+            console.log(id.item);
+            $("#btnDeleteQues").closest(".questionForm").remove();
+        }
 
         sabio.page.quizEditSuccess = (data, status, xhr) => console.log("edit success");  
 
